--- a/1.html
+++ b/1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-<body>
-<!--
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
+  <body>
+    <!--
 Обязательное задание.
 
 Необходимо с помощью цикла for вывести следующие 11 строк в консоль:
@@ -16,10 +16,28 @@
 …
 10 – четное число
 -->
-<script>
-  "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
-</body>
+    <!--
+i ровно 0,
+i сравнивается с меньше или ровно 10
+прибавляется 1
+i = 0
+если остаток от деления  равен 1, нечетное число
+если i не равно 0 и остаток от деления не равен 1,
+то четное число 
+-->
+    <script>
+      "use strict";
+
+      for (let i = 0; i <= 10; i++) {
+        if (i === 0) {
+          console.log(`${i} - это ноль`);
+        } else if (i % 2 === 1) {
+          console.log(`${i} - нечетное число`);
+        } else {
+          console.log(`${i} - четное число`);
+        }
+      }
+    </script>
+  </body>
 </html>
