--- a/6.html
+++ b/6.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-<body>
-<!--
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
+  <body>
+    <!--
 Необязательное задание.
 
 Необходимо вывести горку в консоль (используя цикл for), как показано на
@@ -22,10 +22,12 @@ xxxxx
 Примечание: в трех косых кавычках ``` показан пример кода для вывода, вам эти
 кавычки выводить не нужно.
 -->
-<script>
-  "use strict";
+    <script>
+      "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
-</body>
+      for (let i = 1; i <= 20; i++) {
+        console.log("x".repeat(i));
+      }
+    </script>
+  </body>
 </html>
